<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Kamus Jaringan Komputer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="cari">CARI ISTILAH</string>
    <string name="istilah">Istilah</string>
    <string name="pengertian">Pengertian</string>
    <string name="about">About</string>
    <string name="kosong">Tidak ada data yang ditampilkan</string>
    <string name="namaku">Rahmat</string>
    <string name="npm">09372009</string>
    <string name="jurusan">Teknik Informatika</string>

</resources>
