<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#dbdbdb"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#53c6ff"
        android:orientation="vertical">

        <com.pkmmte.view.CircularImageView
            android:layout_width="200dp"
            android:layout_height="220dp"
            android:layout_gravity="center"
            android:layout_marginTop="35dp"
            android:src="@drawable/rahmat"
            app:border_color="#79ff6c"
            app:border_width="4dp"
            app:shadow="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/namaku"
            android:textSize="30dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/npm"
            android:textSize="30dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/jurusan"
            android:textSize="30dp" />
    </LinearLayout>
</LinearLayout>